welcome.lessons.welcome.loopdowhile.Poucet.scala.code
for (j<-1 to 5 ){
	avance();
	nbBiscuit:Int=0;
	if(estSurBiscuit==true){
		nbBiscuit = nbBiscuit + 1;
		if(nbBiscuit<3){
			doite();
		}
		if(nbBiscuit>3){
			gauche();
		}
	}
}
